[b]Version 0.6.8[/b]:

(2009-03-22)
 * Added an icon for the next_aspect action. Contributed by TT 
   (http://smplayer.berlios.de/forums/viewtopic.php?id=1104).

(2009-03-20)
 * The subtitle and audio delay actions keep now the file paused. They also
   display the current value in the status bar.

(2009-03-19)
 * Added some icons for: Help -> Tips, Video -> Preview, Video -> Start/stop
   taking screenshots, Subtitles -> Find subtitles on opensubtitles.org and
   updated the Qt logo (taken from the Qt sources).

(2009-03-18)
 * (Videopreview) Ctrl+H toggles displaying the info about the video.
 * Don't use "set_property switch_video" when using the nsv demuxer. It makes
   mplayer stop displaying the video after a few seconds.
 * Added a new option: Video -> Start/stop taking screenshots (of each frame)
   assigned by default to "Shift+D" (the icon for this action: screenshots.png)
   When this option is selected, a screenshot will be taken (and saved in
   png format to the screenshot folder) for each frame. Select the option
   again to stop taking screenshots. 

(2009-03-16)
 * (Windows) Now by default the combos in Preferences -> Drives will show all
   drives, not only CD/DVD devices, as it has been reported that checking
   for those devices can be slow if there are network drives. Now there's
   a button "Scan for CD/DVD devices" to force the detection of CD/DVD devices.

(2009-03-12)
 * Deleted the obsolete translations from smplayer_gl.ts (caused lrelease
   to fail with Qt 4.5.0).

(2009-03-11)
 * Fixed some build problems that could make the installation fail, trying to 
   recompile everything again with qt3 because QMAKE can be undefined during 
   make install.


[b]Version 0.6.7[/b]:

(2009-03-06)
 * The media type icons (type_audio.png, type_dvd.png, type_url.png, 
   type_video.png, type_cdda.png, type_unknown.png and type_vcd.png) which 
   appear in the info window can now be overridden by the icon themes.

(2009-03-05)